--- a/components/widgets/widgets.view.html
+++ b/components/widgets/widgets.view.html
@@ -1,8 +1,1 @@
-<div class="row">
-    <div class="col-sm-6">
-        <ui-view></ui-view>
-    </div>
-    <div class="col-sm-6">
-        <div ui-view="details"></div>
-    </div>
-</div>
+<ui-view class="row"></ui-view>
