--- a/components/widgets/detail/detail.view.html
+++ b/components/widgets/detail/detail.view.html
@@ -1,10 +1,11 @@
-<div class="panel panel-primary">
-    <div class="panel-heading text-center">
-        <div class="panel-title">
+<div class="card card-primary">
+    <div class="card-header text-center">
+        <span ui-sref="widgets.summary"><span class="fas fa-times float-right"></span></span>
+        <div class="card-title">
             Widget {{detail.data.number}} Details
         </div>
     </div>
-    <div class="panel-body">
+    <div class="card-body">
         <div class="row">
             <div class="col">
                 <form>
@@ -21,7 +22,7 @@
                     <div class="form-group">
                         <label for="keyValuesPairs">Key / Values Pairs</label>
                         <div class="row" ng-repeat="pair in detail.data.pairs">
-                            <div class="col-sm-1 col-centered">{{$index}}</div>
+                            <div class="col-sm-1 col-centered">{{$index + 1}}.</div>
                             <div class="col-sm-4">
                                 <input type="text" class="form-control" id="key" ng-model="pair.key" readonly
                                     placeholder="Key">
@@ -33,8 +34,8 @@
                         </div>
                     </div>
                     <div class="form-group pull-right">
-                        <button type="button" class="btn btn-primary"
-                            ui-sref="widgets.edit({id: detail.id})">Edit</button>
+                        <button type="button" class="btn btn-primary" ui-sref="widgets.edit({id: detail.id})"><span
+                                class="fas fa-pencil-alt"></span></button>
                     </div>
                 </form>
             </div>
