replace panel with card

--- a/components/widgets/add/add.view.html
+++ b/components/widgets/add/add.view.html
@@ -1,10 +1,10 @@
-<div class="panel panel-primary">
-    <div class="panel-heading text-center">
-        <div class="panel-title">
+<div class="card card-primary">
+    <div class="card-header text-center">
+        <div class="card-title">
             Widget Add
         </div>
     </div>
-    <div class="panel-body">
+    <div class="card-body">
         <div class="row">
             <div class="col">
                 <form ng-submit="add.saveWidget()">
