--- a/components/widgets/add/add.view.html
+++ b/components/widgets/add/add.view.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="form-group">
                         <label for="keyValuesPairs">Key / Values Pairs</label>
-                        <div class="row form-group" ng-repeat="pair in add.data.pairs">
+                        <div class="row form-group" ng-repeat="pair in add.data.pairs track by $index">
                             <div class="col-sm-1 col-centered">{{$index + 1}}</div>
                             <div class="col-sm-4">
                                 <input type="text" class="form-control" id="key" ng-model="pair.key" required
