--- a/components/widgets/detail/detail.view.html
+++ b/components/widgets/detail/detail.view.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="form-group">
                         <label for="keyValuesPairs">Key / Values Pairs</label>
-                        <div class="row" ng-repeat="pair in detail.data.pairs">
+                        <div class="row" ng-repeat="pair in detail.data.pairs track by $index">
                             <div class="col-sm-1 col-centered">{{$index + 1}}.</div>
                             <div class="col-sm-4">
                                 <input type="text" class="form-control" id="key" ng-model="pair.key" readonly
