--- a/components/widgets/summary/summary.view.html
+++ b/components/widgets/summary/summary.view.html
@@ -16,7 +16,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="widget in summary.widgets">
+                            <tr ng-repeat="widget in summary.widgets track by $index">
                                 <td>{{widget.name}}</td>
                                 <td>
                                     <button type="button" class="btn btn-primary"
