--- a/components/widgets/detail/detail.view.html
+++ b/components/widgets/detail/detail.view.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="form-group pull-right">
-                        <button type="button" class="btn btn-primary" ui-sref="widgets.edit({id: detail.id})"><span
+                        <button type="button" class="btn btn-outline-primary" ui-sref="widgets.edit({id: detail.id})"><span
                                 class="fas fa-pencil-alt"></span></button>
                     </div>
                 </form>
