update edit component

--- a/components/widgets/edit/edit.view.html
+++ b/components/widgets/edit/edit.view.html
@@ -7,7 +7,7 @@
     <div class="card-body">
         <div class="row">
             <div class="col">
-                <form ng-submit="edit.saveWidget()">
+                <form ng-submit="edit.updateWidget()">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" class="form-control" id="name" ng-model="edit.data.name" required
